# keyhole-SDK

./: .env.example  .gitattributes  .gitignore  .venv  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  _probe2.py  _probe_provision.py  bootstrap.ps1  bootstrap.sh  check_gap_ops.py  check_ops.py  docker-compose.yml  gap_resolve_input.json  gap_status_input.json  gaps_current.json  initial_release_msg.txt  probe-live-20260528.txt  probe-live-20260601.txt  probe-live-20260603.txt  probe-live-20260604.txt  probe-live-20260604b.txt  pyproject.toml  repo-file-inventory-before-cleanup.txt  revalidate_input.json  status_input.json  test_claim_actions.py  test_evidence_and_provision.py  test_gap_close_paths.py  test_gaps_get.py  test_wait_reclaim.py  test_ws_final.py  test_ws_full_result.py  test_ws_probe.py  test_ws_status.py
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  setup.sh
.github/: CODEOWNERS  copilot-instructions.md
deploy/: compose.public-runtime.yml  compose.server.yml
docs/: AGENT.md  architecture.md  attestation.md  auth-bootstrap.md  boundary-constitution.md  bridge-contract.md  launch-readiness.md  proof-ready.md  public-release-sanitization.md  quickstart.md  recursive-demo-evidence-map.md  recursive-demo-operator-notes.md  recursive-demo.md  smoke-evidence.md  smoke.md  supported-environments.md  test-runtime.md  traefik-deploy.md  trust-posture.md
my-first-app/: capability_passport.yaml  dependencies.yaml  governance_contract.yaml  keyhole.yaml
openapi/: test-runtime.openapi.yaml
(+566 files in other folders)
